--- a/SER234/SER234.vcxproj
+++ b/SER234/SER234.vcxproj
@@ -18,11 +18,11 @@
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="disk.c" />
-    <ClCompile Include="mem_man.c" />
-    <ClCompile Include="proc.c" />
-    <ClCompile Include="profile.c" />
-    <ClCompile Include="util.c" />
+    <ClCompile Include="disk.cpp" />
+    <ClCompile Include="mem_man.cpp" />
+    <ClCompile Include="proc.cpp" />
+    <ClCompile Include="profile.cpp" />
+    <ClCompile Include="util.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{1EF05ABA-4FD1-4AE6-8864-0BB5E53D09E5}</ProjectGuid>
